Allow localhost:5173 CORS requests on DEV (only)